# ruka

./: .gitignore  Cargo.toml  LICENSE  README.md  output.json
examples/: cli.rs  config.json  playlist.rs  transcode.rs
examples/config/: config.json
src/: audio.rs  cli.rs  converter.rs  error.rs  lib.rs  main.rs  prelude.rs
src/cli/: config_parser.rs  mod.rs
src/metadata/: mod.rs
