[package]
name = "ruka"
version = "1.0.0"
edition = "2021"
authors = ["smilecraft4"]

[lib]
name = "ruka"
path = "src/lib.rs"

[[bin]]
name = "ruka"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
anyhow = "1"