[package]
name = "ruka"
version = "1.0.0"
edition = "2021"
authors = ["smilecraft4"]

# Targets

[lib]
name = "ruka"
path = "src/lib.rs"

[[bin]]
name = "ruka"
path = "src/main.rs"

# Crates

[dependencies]
anyhow = "1"
clap = "4"
thiserror = "1"
rustube = { version = "0.6", features = ["blocking"] }
reqwest = { version = "0.11", features = ["json", "blocking"]}
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tempfile = "3.8"
regex = "1"
rand = "0.8"


[dev-dependencies]
reqwest = "0.11"