[package]
name = "ruka"
version = "1.0.0"
edition = "2021"
authors = ["smilecraft4"]

# Targets

[lib]
name = "ruka"
path = "src/lib.rs"

[[bin]]
name = "ruka"
path = "src/main.rs"

# Crates

[dependencies]
clap = "4"
thiserror = "1"
tokio = { version = "1", features = ["full"] }


[dev-dependencies]
anyhow = "1"